# The-real-spotify-downloder-

./: .env  .gitignore  .replit  .spotify_cache  ANDROID_APK_GUIDE.md  Procfile  README_TERMUX.md  app.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  web_app.py
.github/workflows/: Index.html
docs/: INFINITYFREE_DOMAIN_SETUP.md  KATABUMP_DEPLOYMENT.md
netlify/functions/: playlist-tracks.js  search-playlists.js  test-connection.js
public/: index.html
public/static/: manifest.webmanifest
src/: app.py  main.py  web_app.py
src/templates/: index.html  status.html
src/utils/: audio_quality.py  mobile_optimizations.py  termux_helpers.py
static/: sw.js
templates/: index.html
